1. Always show mobile-collapse button 2. Fixed navbar

--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -8,6 +8,8 @@ html, body
 nav
   background-color: $primary-color
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 1px 5px 0px rgba(0, 0, 0, 0.12)
+  a.button-collapse
+    display: block
   .nav-wrapper
     padding: 0 40px 0 16px
     .brand-logo
@@ -95,6 +97,8 @@ footer
     margin-bottom: 0
   .footer-logo, .footer-links
     margin-bottom: 20px
+    @media (min-width: 992px)
+      margin-bottom: 0
   .footer-logo
     color: #fff
     font-weight: 500
